fix(modal proveedores)

--- a/inventarios/inventarios/staticfiles/templates/html/app/add-entradas.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/add-entradas.html
@@ -87,7 +87,7 @@
                 
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label for="valor_unitario_entrada_a">Valor Unitario *</label>
+                            <label for="valor_unitario_entrada_a">Valor Unitario ($) *</label>
                             
                             {% if entradas_id %}
                             <input type="text" class="form-control" placeholder="0.00" oninput="formatCurrency(this)" required id="valor_unitario_entrada_a" name="valor_unitario_entrada_a" required>
@@ -103,11 +103,11 @@
                 
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label for="total">Valor Total *</label>
+                            <label for="total">Valor Total ($)*</label>
                             {% if entradas_id %}
-                            <input type="text" class="form-control" placeholder="Ingrese valor total" required id="total" name="total" value="{{ entradas.total }}" disabled>
+                            <input type="text" class="form-control" oninput="formatCurrency(this)" placeholder="Ingrese valor total" required id="total" name="total" value="{{ entradas.total }}" disabled>
                             {% else %}
-                            <input type="text" class="form-control" placeholder="Ingrese valor total" required id="total" name="total" disabled>
+                            <input type="text" class="form-control" oninput="formatCurrency(this)" placeholder="Ingrese valor total" required id="total" name="total" disabled>
                             {% endif %}
                         </div>
                     </div>
@@ -293,12 +293,32 @@
     var estructura = {{ estructura | safe }};
 
     // Cálculo del valor total en función de la cantidad y el valor unitario.
+
     function recalculateTotal() {
-        var valunit = parseFloat(document.getElementById('valor_unitario_entrada_a').value) || 0;
+        var valunit = parseFloat(document.getElementById('valor_unitario_entrada_a').getAttribute('data-rawvalue')) || 0;
         var cantidad = parseFloat(document.getElementById('cantidad').value) || 0;
         var total = valunit * cantidad;
-        document.getElementById('total').value = total;
+
+        // Actualizar el campo total con el valor calculado
+        document.getElementById('total').value = total.toFixed(2);
+
+        // Formatear el campo total después de la actualización
+        formatCurrency(document.getElementById('total'));
     }
+
+     // Función para formatear el campo total
+     function formatTotal() {
+        let totalInput = document.getElementById('total');
+        let numericValue = parseFloat(totalInput.getAttribute('data-rawvalue')) || 0;
+        let formattedValue = numericValue.toLocaleString('en-US', { maximumFractionDigits: 2 });
+        totalInput.value = formattedValue;
+    }
+
+    // Llamada inicial a formatTotal para asegurar que el campo total esté formateado al cargar la página
+    window.onload = function () {
+        formatTotal();
+    };
+    
 
     function llenarLotesYBodegas() {
         var fincaSeleccionada = estructura.find(f => f.id == document.getElementById('selectFinca').value);
@@ -424,7 +444,7 @@
         var payload = new FormData();
         payload.append('fecha_vencimiento', fecha_vencimiento);
         payload.append('cantidad', cantidad);
-        payload.append('valor_unitario_entrada_a', valor_unitario_entrada_a);
+        payload.append('valor_unitario_entrada_a', valor_unitario_entrada_a*1000);
         payload.append('numero_factura', numero_factura);
         payload.append('bodega', bodega);
         payload.append('insumo', insumo);
