--- a/inventarios/inventarios/staticfiles/templates/html/app/todo.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/todo.html
@@ -608,28 +608,19 @@
             let value = input.value;
     
             // Eliminar cualquier caracter que no sea un número o un punto decimal
-            value = value.replace(/[^0-9.]/g, '');
+            let numericValue = parseFloat(value.replace(/[^0-9.]/g, '')) || 0;
     
-            // Dividir la parte entera y la parte decimal
-            let parts = value.split('.');
-            let integerPart = parts[0];
-            let decimalPart = parts.length > 1 ? '.' + parts[1] : '';
+            // Almacenar el valor numérico en un atributo personalizado
+            input.setAttribute('data-rawvalue', numericValue);
     
-            // Agregar comas cada tres dígitos en la parte entera
-            integerPart = integerPart.replace(/\B(?=(\d{3})+(?!\d))/g, ',');
-    
-            // Formatear el valor con comas, puntos y comillas
-            let formattedValue = '$ ' + integerPart + decimalPart ;
+            // Formatear el valor con comas en la parte entera
+            let formattedValue = numericValue.toLocaleString('en-US', { maximumFractionDigits: 2 });
     
             // Asignar el valor formateado al input
             input.value = formattedValue;
         }
-    
-        
-    
-    
-    
     </script>
+    
 </body>
 
 </html>
