--- a/inventarios/inventarios/staticfiles/templates/html/app/list-certificacion.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-certificacion.html
@@ -21,8 +21,10 @@
             <h4 class="mb-3">Listado de Certificaciones </h4>
             <p class="mb-0"> </p>
         </div>
+        {% if "creacion" in grupos_usuario%}
         <a href="{% url 'add_certificacion' %}" class="btn btn-primary add-list"><i class="las la-plus mr-3"></i>Añadir
             Certificación</a>
+        {% endif %}
     </div>
 </div>
 <div class="col-lg-12">
@@ -118,6 +120,22 @@
                 .then(response => response.json())
                 .then(ingrediente => {
                     const row = document.createElement('tr');
+                    var esAdministrador = {% if 'administracion' in grupos_usuario %}true{% else %}false{% endif %};
+                    if (esAdministrador) {
+                        var btn_eliminar = `<a class="badge bg-warning mr-2 delete-button" data-toggle="tooltip" data-placement="top" title="Delete" href="#" data-id="${ingrediente.id}"><i class="ri-delete-bin-line mr-0"></i></a>`
+                    }
+                    else{
+                        var btn_eliminar = ''
+                    }
+
+                    var esEditar = {% if 'edicion' in grupos_usuario %}true{% else %}false{% endif %};
+                    if (esEditar) {
+                        var btn_editar = `<a class="badge bg-warning mr-2 delete-button" data-toggle="tooltip" data-placement="top" title="" data-original-title="Delete" href="#" data-id="${certificacion.id}"><i class="ri-delete-bin-line mr-0"></i></a>`
+                    }
+                    else{
+                        var btn_editar = ''
+                    }
+
                     row.innerHTML = `
                     <td>${certificacion.registro_ica}</td>
                     <td>${certificacion.periodo_carencia}</td>
@@ -126,8 +144,9 @@
                     <td>
                         <div class="d-flex align-items-center list-action">
                             <a class="badge badge-info mr-2" data-toggle="modal" data-target="#exampleModalCenteredScrollable${ certificacion.id }" href="#"><i class="ri-eye-line mr-0"></i></a>
-                            <a class="badge bg-success mr-2 edit-button" data-toggle="tooltip" data-placement="top" title="" data-original-title="Edit" href="#" data-id="${certificacion.id}"><i class="ri-pencil-line mr-0"></i></a>
-                            <a class="badge bg-warning mr-2 delete-button" data-toggle="tooltip" data-placement="top" title="" data-original-title="Delete" href="#" data-id="${certificacion.id}"><i class="ri-delete-bin-line mr-0"></i></a>
+                            ${btn_editar}
+                            ${btn_eliminar}
+                            
                         </div>
                     </td>`;
                     tbody.appendChild(row);
