--- a/inventarios/inventarios/staticfiles/templates/html/app/list-grupos.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-grupos.html
@@ -9,7 +9,9 @@
             <h4 class="mb-3">Listado de Grupos de Insumos</h4>
             <p class="mb-0">  </p>
         </div>
+        {% if "creacion" in grupos_usuario%}
         <a href="{% url 'add_grupo' %}" class="btn btn-primary add-list"><i class="las la-plus mr-3"></i>Añadir Grupo de Insumos</a>
+        {% endif %}
     </div>
 </div>
 <div class="col-lg-12">
@@ -30,8 +32,8 @@
                 <td>
                     <div class="d-flex align-items-center list-action">
                         <a class="badge badge-info mr-2 view-button" data-toggle="modal" data-placement="top" title="Información del Grupo" href="#" data-content="" data-target="#exampleModalCenteredScrollable{{grupo.id}}" data-id="{{grupo.id}}"><i class="ri-eye-line mr-0"></i></a>
-                        <a class="badge bg-success mr-2 edit-button" data-toggle="tooltip" data-placement="top" title="Edit" href="#" data-id="{{grupo.id}}"><i class="ri-pencil-line mr-0"></i></a>
-                        <a class="badge bg-warning mr-2 delete-button" data-toggle="tooltip" data-placement="top" title="Delete" href="#" data-id="{{grupo.id}}"><i class="ri-delete-bin-line mr-0"></i></a>
+                        {% if "edicion" in grupos_usuario%}<a class="badge bg-success mr-2 edit-button" data-toggle="tooltip" data-placement="top" title="Edit" href="#" data-id="{{grupo.id}}"><i class="ri-pencil-line mr-0"></i></a>{%endif%}
+                        {% if "administracion" in grupos_usuario%}<a class="badge bg-warning mr-2 delete-button" data-toggle="tooltip" data-placement="top" title="Delete" href="#" data-id="{{grupo.id}}"><i class="ri-delete-bin-line mr-0"></i></a>{%endif%}
                     </div>
                 </td>
             </tr>
