--- a/inventarios/inventarios/staticfiles/templates/html/app/list-ingrediente.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-ingrediente.html
@@ -8,7 +8,9 @@
         <div>
             <h4 class="mb-3">Listado de Ingrediente Activo</h4>
         </div>
+        {% if "creacion" in grupos_usuario%}
         <a href="{% url 'add_ingrediente' %}" class="btn btn-primary add-list"><i class="las la-plus mr-3"></i>Añadir Ingrediente Activo</a>
+        {% endif %}
     </div>
 </div>
 <div class="col-lg-12">
@@ -87,14 +89,30 @@
                 console.log(data)
                 data.forEach(ingrediente => {
                     const row = document.createElement('tr');
+                    var esAdministrador = {% if 'administracion' in grupos_usuario %}true{% else %}false{% endif %};
+                    if (esAdministrador) {
+                        var btn_eliminar = `<a class="badge bg-warning mr-2 delete-button" data-toggle="tooltip" data-placement="top" title="Delete" href="#" data-id="${ingrediente.id}"><i class="ri-delete-bin-line mr-0"></i></a>`
+                    }
+                    else{
+                        var btn_eliminar = ''
+                    }
+
+                    var esEditar = {% if 'edicion' in grupos_usuario %}true{% else %}false{% endif %};
+                    if (esEditar) {
+                        var btn_editar = `<a class="badge bg-success mr-2 edit-button" data-toggle="tooltip" data-placement="top" title="Edit" href="#" data-id="${ingrediente.id}"><i class="ri-pencil-line mr-0"></i></a>`
+                    }
+                    else{
+                        var btn_editar = ''
+                    }
 
                     row.innerHTML = `
                 <td>${ingrediente.nombre}</td>
                 <td>
                     <div class="d-flex align-items-center list-action">
                         <a class="badge badge-info mr-2" data-toggle="modal" data-placement="top" title="Información del Ingrediente" href="#" data-content="Nombres del Ingrediente:${ingrediente.name}" data-target="#exampleModalCenteredScrollable${ingrediente.id}"><i class="ri-eye-line mr-0"></i></a>
-                        <a class="badge bg-success mr-2 edit-button" data-toggle="tooltip" data-placement="top" title="Edit" href="#" data-id="${ingrediente.id}"><i class="ri-pencil-line mr-0"></i></a>
-                        <a class="badge bg-warning mr-2 delete-button" data-toggle="tooltip" data-placement="top" title="Delete" href="#" data-id="${ingrediente.id}"><i class="ri-delete-bin-line mr-0"></i></a>
+                        ${btn_editar}
+                        ${btn_eliminar}
+                        
                     </div>
                 </td>
             `;
