--- a/inventarios/inventarios/staticfiles/templates/html/app/list-insumos.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-insumos.html
@@ -9,7 +9,9 @@
             <h4 class="mb-3">Listado de Insumos</h4>
             <p class="mb-0"></p>
         </div>
+        {% if "creacion" in grupos_usuario%}
         <a href="{% url 'add_insumo' %}" class="btn btn-primary add-list"><i class="las la-plus mr-3"></i>Añadir Insumo</a>
+        {%endif%}
     </div>
 </div>
 <div class="col-lg-12">
@@ -34,8 +36,8 @@
                     <td>
                         <div class="d-flex align-items-center list-action">
                             <a class="badge badge-info mr-2" data-toggle="modal" data-title="Información del Insumo" data-target="#exampleModalCenteredScrollable{{ insumo.id }}" data-html="true" title="Información del Insumo" href="#"><i class="ri-eye-line mr-0"></i>Información del Insumo</a>
-                            <a class="badge bg-success mr-2 edit-button" data-toggle="tooltip" title="Edit" href="#" data-id="{{ insumo.id }}"><i class="ri-pencil-line mr-0"></i></a>
-                            <a class="badge bg-warning mr-2 delete-button" data-toggle="tooltip" title="Delete" href="#" data-id="{{ insumo.id }}"><i class="ri-delete-bin-line mr-0"></i></a>
+                            {% if "edicion" in grupos_usuario %}<a class="badge bg-success mr-2 edit-button" data-toggle="tooltip" title="Edit" href="#" data-id="{{ insumo.id }}"><i class="ri-pencil-line mr-0"></i></a> {%endif%}
+                            {% if "administracion" in grupos_usuario %}<a class="badge bg-warning mr-2 delete-button" data-toggle="tooltip" title="Delete" href="#" data-id="{{ insumo.id }}"><i class="ri-delete-bin-line mr-0"></i></a> {%endif%}
                         </div>
                     </td>
                 </tr>
@@ -154,6 +156,22 @@
                                 return response.json();
                             })
                             .then(unidad => {
+                                // Crear y agregar cada columna (td) al row
+                var esAdministrador = {% if 'administracion' in grupos_usuario%}true{% else %}false{% endif %};
+                if (esAdministrador) {
+                    var btn_eliminar = `<a class="badge bg-warning mr-2 delete-button" data-toggle="tooltip" title="Delete" href="#" data-id="${user.usuario.id}"><i class="ri-delete-bin-line mr-0"></i></a>`
+                }
+                else{
+                    var btn_eliminar = ''
+                }
+
+                var esEditar = {% if 'edicion' in grupos_usuario %}true{% else %}false{% endif %};
+                if (esEditar) {
+                    var btn_editar = `<a class="badge bg-success mr-2 edit-button" data-toggle="tooltip" title="Edit" href="#" data-id="${insumo.id}"><i class="ri-pencil-line mr-0"></i></a>`
+                }
+                else{
+                    var btn_editar = ''
+                }
 
                 tr.innerHTML = `
                     <td>${insumo.nombre}</td>
@@ -163,8 +181,9 @@
                     <td>
                         <div class="d-flex align-items-center list-action">
                             <a class="badge badge-info mr-2" data-toggle="modal" data-title="Información del Usuario" data-html="true" title="Información de Usuario" data-target="#exampleModalCenteredScrollable${insumo.id}" href="#"><i class="ri-eye-line mr-0"></i></a>
-                            <a class="badge bg-success mr-2 edit-button" data-toggle="tooltip" title="Edit" href="#" data-id="${insumo.id}"><i class="ri-pencil-line mr-0"></i></a>
-                            <a class="badge bg-warning mr-2 delete-button" data-toggle="tooltip" title="Delete" href="#" data-id="${insumo.id}"><i class="ri-delete-bin-line mr-0"></i></a>
+                            ${btn_editar}
+                            ${btn_eliminar}
+                            
                         </div>
                     </td>`;
 
