--- a/inventarios/inventarios/staticfiles/templates/html/app/list-lotes.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-lotes.html
@@ -9,7 +9,9 @@
             <h4 class="mb-3">Listado de Lotes</h4>
             <p class="mb-0">  </p>
         </div>
+        {% if "creacion" in grupos_usuario%}
         <a href="{% url 'add_lotes' %}" class="btn btn-primary add-list"><i class="las la-plus mr-3"></i>Añadir Lote</a>
+        {% endif %}
     </div>
 </div>
 <div class="col-lg-12">
@@ -34,8 +36,8 @@
                         <td>
                             <div class="d-flex align-items-center list-action">
                                 <a class="badge badge-info mr-2" data-toggle="modal" data-title="Información de la Bodega" data-content="Nombre: {{ bodega.nombre_bodega }}" data-html="true" title="Información de Bodega" href="#" data-target="#exampleModalCenteredScrollable{{ lote.id }}"><i class="ri-eye-line mr-0"></i></a>
-                                <a class="badge bg-success mr-2 edit-button" data-toggle="tooltip" title="Editar" href="#" data-id="{{ lote.id }}"><i class="ri-pencil-line mr-0"></i></a>
-                                <a class="badge bg-warning mr-2 delete-button" data-toggle="tooltip" title="Eliminar" href="#" data-id="{{ lote.id }}"><i class="ri-delete-bin-line mr-0"></i></a>
+                                {% if "edicion" in grupos_usuario%}<a class="badge bg-success mr-2 edit-button" data-toggle="tooltip" title="Editar" href="#" data-id="{{ lote.id }}"><i class="ri-pencil-line mr-0"></i></a>{%endif%}
+                                {% if "administracion" in grupos_usuario%}<a class="badge bg-warning mr-2 delete-button" data-toggle="tooltip" title="Eliminar" href="#" data-id="{{ lote.id }}"><i class="ri-delete-bin-line mr-0"></i></a>{%endif%}
                             </div>
                         </td>
                     </tr>
