--- a/inventarios/inventarios/staticfiles/templates/html/app/list-salidas.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-salidas.html
@@ -13,7 +13,7 @@
         <button data-table-id="exitsTable" class="btn btn-success btnExportar">
             <i class="fas fa-file-excel"></i> Exportar datos a Excel
         </button>
-        <a href="{% url 'add_salidas' %}" class="btn btn-primary add-list"><i class="las la-plus mr-3"></i>Añadir</a>
+        {% if "creacion" in grupos_usuario%}<a href="{% url 'add_salidas' %}" class="btn btn-primary add-list"><i class="las la-plus mr-3"></i>Añadir</a>{%endif%}
     </div>
 </div>
 <div class="col-lg-12">
@@ -39,10 +39,10 @@
                     <td>
                         <div class="d-flex align-items-center list-action">
                             <a class="badge badge-info mr-2" data-toggle="modal" data-title="Información de la Bodega" data-content="Nombre: {{ bodega.nombre_bodega }}" data-html="true" title="Información de Bodega" href="#" data-target="#exampleModalCenteredScrollable{{salida.pk}}"><i class="ri-eye-line mr-0"></i></a>
-                            <a class="badge bg-success mr-2 edit-button" data-toggle="tooltip" title="Edit" href="#"
-                                data-id="{{salida.pk}}"><i class="ri-pencil-line mr-0"></i></a>
-                            <a class="badge bg-warning mr-2 delete-button" data-toggle="tooltip" title="Delete" href="#"
-                                data-id="{{salida.pk}}"><i class="ri-delete-bin-line mr-0"></i></a>
+                            {% if "edicion" in grupos_usuario%}<a class="badge bg-success mr-2 edit-button" data-toggle="tooltip" title="Edit" href="#"
+                                data-id="{{salida.pk}}"><i class="ri-pencil-line mr-0"></i></a>{%endif%}
+                                {% if "administracion" in grupos_usuario%}<a class="badge bg-warning mr-2 delete-button" data-toggle="tooltip" title="Delete" href="#"
+                                data-id="{{salida.pk}}"><i class="ri-delete-bin-line mr-0"></i></a>{%endif%}
                         </div>
                     </td>
                 </tr>
