--- a/inventarios/inventarios/staticfiles/templates/html/app/list-usuarios.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-usuarios.html
@@ -10,13 +10,18 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 
+
+
+
 <div class="col-lg-12">
     <div class="d-flex flex-wrap align-items-center justify-content-between mb-4">
         <div>
             <h4 class="mb-3">Listado de Usuarios</h4>
             <p class="mb-0"> Listado de usuarios registrados en plataforma </p>
         </div>
+        {% if "creacion" in grupos_usuario%}
         <a href="{% url 'add_user' %}" class="btn btn-primary add-list"><i class="las la-plus mr-3"></i>Añadir</a>
+        {%endif%}
     </div>
 </div>
 <div class="col-lg-12">
@@ -85,6 +90,23 @@
                 const row = document.createElement('tr');
 
                 // Crear y agregar cada columna (td) al row
+                var esAdministrador = {% if 'administracion' in grupos_usuario%}true{% else %}false{% endif %};
+                if (esAdministrador) {
+                    var btn_eliminar = `<a class="badge bg-warning mr-2 delete-button" data-toggle="tooltip" title="Delete" href="#" data-id="${user.usuario.id}"><i class="ri-delete-bin-line mr-0"></i></a>`
+                }
+                else{
+                    var btn_eliminar = ''
+                }
+
+                var esEditar = {% if 'edicion' in grupos_usuario %}true{% else %}false{% endif %};
+                if (esEditar) {
+                    var btn_editar = `<a class="badge bg-success mr-2 edit-button" data-toggle="tooltip" title="Edit" href="#" data-id="${user.usuario.id}"><i class="ri-pencil-line mr-0"></i></a>`
+                }
+                else{
+                    var btn_editar = ''
+                }
+
+                
                 row.innerHTML = `
         <td>${user.usuario.nombre}</td>
         <td>${user.usuario.apellido}</td>
@@ -93,9 +115,10 @@
         <td>${user.usuario.groups.join(', ') || 'Ninguno'}</td>
         <td>
             <div class="d-flex align-items-center list-action">
+                
                 <a class="badge badge-info mr-2" data-toggle="modal" data-title="Información del Usuario" data-target="#exampleModalCenteredScrollable" data-html="true" title="Información de Usuario" href="#"><i class="ri-eye-line mr-0"></i></a>
-                <a class="badge bg-success mr-2 edit-button" data-toggle="tooltip" title="Edit" href="#" data-id="${user.usuario.id}"><i class="ri-pencil-line mr-0"></i></a>
-                <a class="badge bg-warning mr-2 delete-button" data-toggle="tooltip" title="Delete" href="#" data-id="${user.usuario.id}"><i class="ri-delete-bin-line mr-0"></i></a>
+                ${btn_editar}
+                ${btn_eliminar}
             </div>
         </td>
         <!--MOODAL-->
