--- a/inventarios/inventarios/staticfiles/templates/html/app/list-salidas.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-salidas.html
@@ -67,6 +67,7 @@
                     <b>Insumo: </b><td>{{salida.insumo}}</td><br>
                     <b>Cantidad: </b><td>{{salida.cantidad}}</td><br>
                     <b>Valor Total de Salida: </b><td>{{salida.valor_total_salida}}</td> <br>
+                    <b>Movimientos: </b><td><pre>{{salida.movimientos}}</pre></td> <br>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
